Commit Inicial
---------------

Se hizo que la Stage sea resizable ya que no entraba el ScorePanel
Se agregaron comentarios


Commit Level 1
--------------

Se agrego la propiedad goldenCells al Level1State
Se creo el metodo toString para GameState, y se movio a este la logica de de creacion del mensaje para ScoreBoard

Se creo el enum CellEffect en BoardPanel
Se agrego el parametro CellEffect a setImage en BoardPanel
Se agrego la propiedad CellEffect a Cell

Se agrego la verificacion de celdas doradas en tryMove de Level1
Se agrego el metodo setGoldenCross en Level1
Se agrego el metodo addGoldenCells en Level1State


Commit Level 3
---------------

Se agrego un menu de eleccion de nivel antes de iniciar el juego

Se movio gran parte de la logica de rellenado de grilla al metodo fillGrid de Grid, haciendo que sus implementaciones deban pasarle un GeneratorCell
Se movio en Grid, newState e initialize a un nuevo constructor

Se creo la clase Level3
Se creo la clase BombCandy
Se creo la clase GeneratorCell y BombCandyGeneratorCell

Se agrego el parametro overlayText a setImage en BoardPanel