@@ -3,10 +3,14 @@ package game.backend.element;
 import game.backend.GameListener;
 import game.backend.Grid;
 import game.backend.level.Level3;
+import game.backend.move.Direction;
 
 public class BombCandy extends Candy {
 
-    BombCandy(){
+    private int remainingMoves = Level3.getInitialMoves();
+
+    public BombCandy(Grid grid, CandyColor color) {
+        super(grid, color);
         grid.addListener(new GameListener(){
 
             @Override public void gridUpdated(){}
@@ -16,28 +20,26 @@ public class BombCandy extends Candy {
             @Override
             public void onValidMove() {
 
+                remainingMoves -= 1;
+                if(remainingMoves <= 0){
+                    ((Level3) grid).bombExploded();
+                }
+
+                ((Level3) grid).informBombRemainingMoves(remainingMoves);
+
             }
 
         });
     }
 
-    private int remainingMoves = Level3.getInitialMoves();
-
-    public BombCandy(Grid grid, CandyColor color) {
-        super(grid, color);
-    }
-
-    public int getRemainingMoves(){ return remainingMoves; }
-
-    public boolean decreaseRemainingMoves(){
-        remainingMoves -= 1;
-        return remainingMoves<=0;
-    }
-
-    /*@Override
+    @Override
     public Direction[] explode() {
-        ((Level3) grid).bombExploded();
+        ((Level3) grid).bombDeactivated();
         return super.explode();
-    }*/
+    }
+
+    public int getRemainingMoves() {
+        return remainingMoves;
+    }
 
 }
